fix: avoid NPE in updateConfig when null passed, use isBlank() for null-safe check